--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a mi pagina web!</h1>
+        <div class="header-container">
+            <div class="logo-placeholder">
+                <img id="logo" src="images/gutierrez_logo.jpg" alt="Logo" style="height:50px;" />
+            </div>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#">Subpage 1</a></li>
+                    <li><a href="#">Subpage 2</a></li>
+                    <li><a href="#">Subpage 3</a></li>
+                    <li><a href="#">Contáctanos</a></li>
+                </ul>
+            </nav>
+        </div>
+        <h1>Página para Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
         <p>This is a simple web page example.</p>
