Actualizando paginas progreso 3

--- a/contact_us.html
+++ b/contact_us.html
@@ -32,7 +32,7 @@
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
-        <p>Llevando los mejores productos para ti.</p>
+        <p>Contáctanos al: +51956899907</p>
     </main>
     <footer>
         <div class="footer-container">
