--- a/paprika.html
+++ b/paprika.html
@@ -32,7 +32,10 @@
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
-        <p>Llevando los mejores productos para ti.</p>
+        <h2>Ají Páprika</h2>   
+        <p>Páprika (capsicum annum L.) es una variedad de pimiento dulce con la particularidad de ser alargado, distinto al 
+            "pimiento rojo" o "pimentón". Sus características de color, intensidad de picante y sabor, cambia de acuerdo a 
+            las mejoras genéticas de la planta y las técnicas de cultivo.</p>
     </main>
     <footer>
         <div class="footer-container">
