agregado el mapa interactivo y otros detalles

--- a/garlic.html
+++ b/garlic.html
@@ -32,10 +32,8 @@
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
-        <h2>Ají Páprika</h2>   
-        <p>Páprika (capsicum annum L.) es una variedad de pimiento dulce con la particularidad de ser alargado, distinto al 
-            "pimiento rojo" o "pimentón". Sus características de color, intensidad de picante y sabor, cambia de acuerdo a 
-            las mejoras genéticas de la planta y las técnicas de cultivo.</p>
+        <h2>Ajo</h2>   
+        <p>Insertar texto</p>
     </main>
     <footer>
         <div class="footer-container">
