--- a/contact_us.html
+++ b/contact_us.html
@@ -20,11 +20,11 @@
                     <a href="#">Productos</a>
                         <ul class="dropdown-content">
                             <li><a href="paprika.html">Ají Páprika</a></li>
-                            <li><a href="#">Ajo</a></li>
-                            <li><a href="#">Pimiento ancho</a></li>
+                            <li><a href="garlic.html">Ajo</a></li>
+                            <li><a href="pepper.html">Pimiento ancho</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Subpage 3</a></li>
+                    <li><a href="about_us.html">Acerca de nosotros</a></li>
                     <li><a href="contact_us.html">Contáctanos</a></li>
                 </ul>
             </nav>
@@ -32,6 +32,14 @@
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
+        <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d820.912753195575!2d-72.19134622830248!3d-16.358151172157786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91419b89fb358f23%3A0xa96fbf0a202fdc07!2sAgronegocios%20e%20inversiones%20Gutierrez!5e1!3m2!1ses!2sus!4v1754425049048!5m2!1ses!2sus" 
+        width="600" 
+        height="450" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>Contáctanos al: +51956899907</p>
     </main>
     <footer>
