--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     <a href="#">Productos</a>
                         <ul class="dropdown-content">
                             <li><a href="paprika.html">Ají Páprika</a></li>
-                            <li><a href="#">Ajo</a></li>
-                            <li><a href="#">Pimiento ancho</a></li>
+                            <li><a href="garlic.html">Ajo</a></li>
+                            <li><a href="pepper.html">Pimiento ancho</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Subpage 3</a></li>
+                    <li><a href="about_us.html">Acerca de nosotros</a></li>
                     <li><a href="contact_us.html">Contáctanos</a></li>
                 </ul>
             </nav>
