--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agronegocios e Inversiones Gutierrez</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
@@ -32,6 +32,36 @@
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
+        <div class="slideshow-container">
+
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="images/paprika_1.jpeg" style="width:100%">
+            <div class="text">Los mejores productos y la mejor calidad</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="images/paprika_2.avif" style="width:100%">
+            <div class="text">Hecho por una cadena autosostenible.</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="images/paprika_3.jpg" style="width:100%">
+            <div class="text">Hecho por una empresa familiar.</div>
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
         <p>Llevando los mejores productos para ti.</p>
     </main>
     <footer>
