Fix para telefonos y el css

--- a/contact_us.html
+++ b/contact_us.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agronegocios e Inversiones Gutierrez</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <img id="logo" src="images/gutierrez_logo.jpeg" alt="Logo" style="height:50px;" />
+                <img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" />
             </div>
             <nav>
                 <ul class="nav-links">
@@ -32,15 +34,23 @@
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
-        <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d820.912753195575!2d-72.19134622830248!3d-16.358151172157786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91419b89fb358f23%3A0xa96fbf0a202fdc07!2sAgronegocios%20e%20inversiones%20Gutierrez!5e1!3m2!1ses!2sus!4v1754425049048!5m2!1ses!2sus" 
-        width="600" 
-        height="450" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <p>Contáctanos al: +51956899907</p>
+        <div class="contact-container">
+            <div class="map-wrapper">
+                <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d820.912753195575!2d-72.19134622830248!3d-16.358151172157786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91419b89fb358f23%3A0xa96fbf0a202fdc07!2sAgronegocios%20e%20inversiones%20Gutierrez!5e1!3m2!1ses!2sus!4v1754425049048!5m2!1ses!2sus" 
+                width="600" 
+                height="450" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="contact-text">
+                <p>Contáctanos al: +51956899907</p>
+                <p>Email: jgutierrez@agroguti.com</p>
+                <p>Horario de atención: 10:00-20:00</p>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
