--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agronegocios e Inversiones Gutierrez</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link 
+    rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" 
+    integrity="sha512-8epD1cGL72fJGqMy0d2g9V3R+qM+F1eMf/ccZNg8tEj27w5EC6X4w2rOypNbpYMXB4gAvMPRBUl1Ytad8R9vug==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" 
+    />
     <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <img id="logo" src="images/gutierrez_logo.jpeg" alt="Logo" style="height:50px;" />
+                <img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" />
             </div>
             <nav>
                 <ul class="nav-links">
@@ -19,7 +27,7 @@
                     <li class="dropdown">
                     <a href="#">Productos</a>
                         <ul class="dropdown-content">
-                            <li><a href="paprika.html">Ají Páprika</a></li>
+                            <li><a href="paprika.html">Pimiento Páprika</a></li>
                             <li><a href="garlic.html">Ajo</a></li>
                             <li><a href="pepper.html">Pimiento ancho</a></li>
                         </ul>
@@ -67,6 +75,11 @@
     <footer>
         <div class="footer-container">
             <p>&copy; 2025 Agronegocios e Inversiones Gutierrez</p>
+            <div class="social-icons">
+                <a href="https://facebook.com/yourpage" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://wa.me/+51956899907" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            </div>
         </div> 
     </footer>
 </body>
