--- a/paprika.html
+++ b/paprika.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agronegocios e Inversiones Gutierrez</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <img id="logo" src="images/gutierrez_logo.jpeg" alt="Logo" style="height:50px;" />
+                <img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" />
             </div>
             <nav>
                 <ul class="nav-links">
