Fixed images and added small logos at the footer

--- a/about_us.html
+++ b/about_us.html
@@ -35,11 +35,41 @@
     </header>
     <main>
         <h2>Visión</h2>   
-        <p>Visión de servicio</p>
+        <p>Ser la compañía comercializadora de alimentos líder caracterizada por brindar un servicio 
+            de calidad en compromiso con las personas y respeto del medio ambiente a fin de que ser un 
+            instrumento de desarrollo integral de nuestro país.</p>
+        <h2>Misión</h2>
+        <p>Generar valor manteniendo el compromiso de calidad, trazabilidad y salubridad con nuestros clientes.</p>
+        <h2>Nuestra forma de trabajar</h2>
+        <p>A través de nuestra labor de servicio, favorecemos a centenares de familias gracias al modelo de negocio que
+            usamos.
+        </p>
+
+        <h1>¿A que países exportamos?</h1>
+        <h2>ESTADOS UNIDOS</h2>
+        <p>Estados Unidos de América es una república federal constitucional compuesta por 50 estados y un distrito federal. 
+            Es la principal economía del mundo. Este país tiene un alto poder adquisitivo. Es gran protagonista en el comercio exterior. 
+            Fue el segundo país exportador y primer importador de bienes en 2020. Fue el mercado más importante para las exportaciones de 
+            los capsicum peruanos.</p>
+        <h2>MEXICO</h2>
+        <p>México se constituye en el quinto país más extenso del continente americano y el tercero entre los países latinoamericanos.
+        Este mercado creció a tasas elevadas en capsicum incluso durante los meses más críticos de la pandemia.
+        </p>
+        <h2>ESPAÑA</h2>
+        <p>España es un país miembro de la Unión Europea. Presenta una de las mayores tasas de inmigración a nivel mundial y ha 
+            alcanzado un gran progreso económico durante las últimas décadas.
+            Sin embargo, permanece aún detrás de muchos países de Europa Occidental. Se consolidó como uno de los mercados 
+            con mayor acogida en capsicum peruanos.
+        </p>
     </main>
     <footer>
         <div class="footer-container">
             <p>&copy; 2025 Agronegocios e Inversiones Gutierrez</p>
+            <div class="social-icons">
+                <a href="https://facebook.com/yourpage" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://wa.me/+51956899907" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            </div>
         </div> 
     </footer>
 </body>
