--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link 
     rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" 
-    integrity="sha512-8epD1cGL72fJGqMy0d2g9V3R+qM+F1eMf/ccZNg8tEj27w5EC6X4w2rOypNbpYMXB4gAvMPRBUl1Ytad8R9vug==" 
     crossorigin="anonymous" 
     referrerpolicy="no-referrer" 
     />
@@ -27,9 +26,9 @@
                     <li class="dropdown">
                     <a href="#">Productos</a>
                         <ul class="dropdown-content">
-                            <li><a href="paprika.html">Pimiento Páprika</a></li>
+                            <li><a href="paprika.html">Paprika</a></li>
                             <li><a href="garlic.html">Ajo</a></li>
-                            <li><a href="pepper.html">Pimiento ancho</a></li>
+                            <li><a href="pepper.html">Chile Ancho</a></li>
                         </ul>
                     </li>
                     <li><a href="about_us.html">Acerca de nosotros</a></li>
@@ -44,19 +43,19 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="images/paprika_1.jpeg" style="width:100%">
+            <img src="images/pimiento_3.jpg" style="width:100%">
             <div class="text">Los mejores productos y la mejor calidad</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="images/paprika_2.avif" style="width:100%">
+            <img src="images/pimiento_2.jpg" style="width:100%">
             <div class="text">Hecho por una cadena autosostenible.</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="images/paprika_3.jpg" style="width:100%">
+            <img src="images/proceso_1.jpg" style="width:100%">
             <div class="text">Hecho por una empresa familiar.</div>
         </div>
 
