Small icon links now working

--- a/garlic.html
+++ b/garlic.html
@@ -35,14 +35,15 @@
     </header>
     <main>
         <h2>Ajo</h2>   
-        <p>Insertar texto</p>
+        <p>El ajo (Allium sativum) es una planta culinaria conocida por sus propiedades medicinales y beneficios para la salud, 
+            como el fortalecimiento del sistema inmunitario, la mejora de la salud cardiovascular y la reducción de la inflamación </p>
     </main>
     <footer>
         <div class="footer-container">
             <p>&copy; 2025 Agronegocios e Inversiones Gutierrez</p>
             <div class="social-icons">
-                <a href="https://facebook.com/yourpage" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/agronegocios.gutierrez" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.linkedin.com/company/agronegocios-e-inversiones-gutierrez" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://wa.me/+51956899907" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div> 
