--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div class="footer-container">
             <p>&copy; 2025 Agronegocios e Inversiones Gutierrez</p>
             <div class="social-icons">
-                <a href="https://facebook.com/yourpage" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/agronegocios.gutierrez" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.linkedin.com/company/agronegocios-e-inversiones-gutierrez" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://wa.me/+51956899907" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div> 
