--- a/pepper.html
+++ b/pepper.html
@@ -34,15 +34,15 @@
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
-        <h2>Pimiento ancho</h2>   
+        <h2>Chile ancho</h2>   
         <p>Desc pimiento ancho</p>
     </main>
     <footer>
         <div class="footer-container">
             <p>&copy; 2025 Agronegocios e Inversiones Gutierrez</p>
             <div class="social-icons">
-                <a href="https://facebook.com/yourpage" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/agronegocios.gutierrez" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.linkedin.com/company/agronegocios-e-inversiones-gutierrez" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://wa.me/+51956899907" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div> 
