Added contact us items, fixed images, fixed text, and fixed logo linking to home

--- a/contact_us.html
+++ b/contact_us.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" />
+                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -46,9 +46,9 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="contact-text">
-                <p>Contáctanos al: +51956899907</p>
-                <p>Email: jgutierrez@agroguti.com</p>
-                <p>Horario de atención: 10:00-20:00</p>
+                <div class="contact-item"><i class="fa-solid fa-phone"></i><p>Contáctanos al: +51956899907</p></div>                
+                <div class="contact-item"><i class="fa-solid fa-envelope"></i><p>Email: jgutierrez@agroguti.com</p></div>
+                <div class="contact-item"><i class="fa-solid fa-clock"></i><p>Horario de atención: 6:00-18:00</p></div>
             </div>
         </div>
     </main>
