--- a/garlic.html
+++ b/garlic.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" />
+                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -33,11 +33,13 @@
         </div>
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
-    <main>
-        <h2>Ajo</h2>   
-        <p>El ajo (Allium sativum) es una planta culinaria conocida por sus propiedades medicinales y beneficios para la salud, 
-            como el fortalecimiento del sistema inmunitario, la mejora de la salud cardiovascular y la reducción de la inflamación </p>
-    </main>
+        <div class="main-text">
+            <main>
+                <h2>Ajo</h2>   
+                <p>El ajo (Allium sativum) es una planta culinaria conocida por sus propiedades medicinales y beneficios para la salud, 
+                    como el fortalecimiento del sistema inmunitario, la mejora de la salud cardiovascular y la reducción de la inflamación </p>
+            </main>
+        </div>
     <footer>
         <div class="footer-container">
             <p>&copy; 2025 Agronegocios e Inversiones Gutierrez</p>
