--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" />
+                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -36,7 +36,6 @@
                 </ul>
             </nav>
         </div>
-        <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
         <div class="slideshow-container">
@@ -49,7 +48,7 @@
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="images/pimiento_2.jpg" style="width:100%">
+            <img src="images/pimiento_6.jpg" style="width:100%">
             <div class="text">Hecho por una cadena autosostenible.</div>
         </div>
 
@@ -69,7 +68,14 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
         </div>
-        <p>Llevando los mejores productos para ti.</p>
+        <div class="main-text">
+            <h1>Agronegocios e Inversiones Gutierrez E.I.R.L.</h1>
+            <p>Somos una empresa dedicada a la producción y comercialización de ajo y capsicum, entre ají Orange, 
+                ají amarillo, pimiento ancho, ají panca, guajillo, jalapeño y ají páprika. Constituyéndose este 
+                último en el mayor porcentaje de producción y teniendo a favor más de 20 años de experiencia en el 
+                \manejo del cultivo, tiempo que ha servido para mejorar la calidad de nuestro producto de forma que 
+                llegue a satisfacer los mercados internacionales más exigentes.</p>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
