--- a/paprika.html
+++ b/paprika.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" />
+                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -34,10 +34,12 @@
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
-        <h2>Ají Páprika</h2>   
-        <p>Páprika (capsicum annum L.) es una variedad de pimiento dulce con la particularidad de ser alargado, distinto al 
-            "pimiento rojo" o "pimentón". Sus características de color, intensidad de picante y sabor, cambia de acuerdo a 
-            las mejoras genéticas de la planta y las técnicas de cultivo.</p>
+        <div class="main-text">
+            <h2>Ají Páprika</h2>   
+            <p>Páprika (capsicum annum L.) es una variedad de pimiento dulce con la particularidad de ser alargado, distinto al 
+                "pimiento rojo" o "pimentón". Sus características de color, intensidad de picante y sabor, cambia de acuerdo a 
+                las mejoras genéticas de la planta y las técnicas de cultivo.</p>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
