--- a/pepper.html
+++ b/pepper.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" />
+                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -34,8 +34,13 @@
         <h1>Agronegocios e Inversiones Gutierrez</h1>
     </header>
     <main>
-        <h2>Chile ancho</h2>   
-        <p>Desc pimiento ancho</p>
+        <div class="main-text">
+            <h2>Chile ancho</h2>   
+            <p>El chile poblano (fresco) o chile ancho (seco) es una variedad del chile Capsicum annuum. 
+                Es muy apreciado en la gastronomía mexicana, donde se usa en todo tipo de recetas, como en los populares 
+                chiles rellenos. En comparación con otros tipos de chiles, el poblano es un fruto grande y con bajo contenido de 
+                capsaicina (entre 1.000–2.000 en la escala Scoville), por lo que no es muy picante.</p>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
