language added, address changed

--- a/contact_us_english.html
+++ b/contact_us_english.html
@@ -9,27 +9,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
     <script src="script.js" defer></script>
-    <meta name="robots"
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
+                <a href="index_english.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index_english.html">Home</a></li>
                     <li class="dropdown">
-                    <a href="#">Productos</a>
+                    <a href="#">Products</a>
                         <ul class="dropdown-content">
-                            <li><a href="paprika.html">Ají Páprika</a></li>
-                            <li><a href="garlic.html">Ajo</a></li>
-                            <li><a href="pepper.html">Pimiento ancho</a></li>
+                            <li><a href="paprika_english.html">Paprika</a></li>
+                            <li><a href="garlic_english.html">Garlic</a></li>
+                            <li><a href="pepper_english.html">Ancho chili</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Acerca de nosotros</a></li>
-                    <li><a href="contact_us.html">Contáctanos</a></li>
+                    <li><a href="about_us_english.html">About Us</a></li>
+                    <li><a href="contact_us_english.html">Contact Us</a></li>
                     <li><a href="contact_us.html"><span class="fi fi-es" title="Español"></span></a></li>
                     <li><a href="contact_us_english.html"><span class="fi fi-us" title="English"></span></a></li>
                 </ul>
@@ -40,20 +39,19 @@
     <main>
         <div class="contact-container">
             <div class="map-wrapper">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d605.8080967622495!2d-72.21473367376862!3d-16.38288948025621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sus!4v1758934697011!5m2!1ses!2sus" 
+                <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d820.912753195575!2d-72.19134622830248!3d-16.358151172157786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91419b89fb358f23%3A0xa96fbf0a202fdc07!2sAgronegocios%20e%20inversiones%20Gutierrez!5e1!3m2!1ses!2sus!4v1754425049048!5m2!1ses!2sus" 
                 width="600" 
                 height="450" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="contact-text">
-                <div class="contact-item"><i class="fa-solid fa-location-dot"></i><p>Dirección: Calle Las Moras Lote 1 y Lote 2 Villa San Pedro y San Pablo</p></div>
-                <div class="contact-item"><i class="fa-solid fa-phone"></i><p>Contáctanos al: +51956899907</p></div>                
-                <div class="contact-item"><i class="fa-solid fa-envelope"></i><p>Email: jgutierrez@agroguti.com</p></div>
-                <div class="contact-item"><i class="fa-solid fa-clock"></i><p>Horario de atención: 6:00-18:00</p></div>
+                <div class="contact-item"><i class="fa-solid fa-phone"></i><p>Contact us through: +51956899907</p></div>                
+                <div class="contact-item"><i class="fa-solid fa-envelope"></i><p>E-mail: jgutierrez@agroguti.com</p></div>
+                <div class="contact-item"><i class="fa-solid fa-clock"></i><p>Hours of operation: 6:00-18:00</p></div>
             </div>
         </div>
     </main>
