--- a/garlic.html
+++ b/garlic.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agronegocios e Inversiones Gutierrez</title>
+    <title>AGRONEGOCIOS E INVERSIONES GUTIERREZ</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -28,16 +29,20 @@
                     </li>
                     <li><a href="about_us.html">Acerca de nosotros</a></li>
                     <li><a href="contact_us.html">Contáctanos</a></li>
+                    <li><a href="garlic.html"><span class="fi fi-es" title="Español"></span></a></li>
+                    <li><a href="garlic_english.html"><span class="fi fi-us" title="English"></span></a></li>
                 </ul>
             </nav>
         </div>
-        <h1>Agronegocios e Inversiones Gutierrez</h1>
+        <h1>AGRONEGOCIOS E INVERSIONES GUTIERREZ</h1>
     </header>
         <div class="main-text">
             <main>
                 <h2>Ajo</h2>   
                 <p>El ajo (Allium sativum) es una planta culinaria conocida por sus propiedades medicinales y beneficios para la salud, 
                     como el fortalecimiento del sistema inmunitario, la mejora de la salud cardiovascular y la reducción de la inflamación </p>
+                <h2>Ficha técnica</h2>
+                <p></p>
             </main>
         </div>
     <footer>
