--- a/garlic_english.html
+++ b/garlic_english.html
@@ -7,46 +7,44 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
+                <a href="index_english.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index_english.html">Home</a></li>
                     <li class="dropdown">
-                    <a href="#">Productos</a>
+                    <a href="#">Products</a>
                         <ul class="dropdown-content">
-                            <li><a href="paprika.html">Ají Páprika</a></li>
-                            <li><a href="garlic.html">Ajo</a></li>
-                            <li><a href="pepper.html">Pimiento ancho</a></li>
+                            <li><a href="paprika_english.html">Paprika</a></li>
+                            <li><a href="garlic_english.html">Garlic</a></li>
+                            <li><a href="pepper_english.html">Ancho chili</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Acerca de nosotros</a></li>
-                    <li><a href="contact_us.html">Contáctanos</a></li>
-                    <li><a href="pepper.html"><span class="fi fi-es" title="Español"></span></a></li>
-                    <li><a href="pepper_english.html"><span class="fi fi-us" title="English"></span></a></li>
+                    <li><a href="about_us_english.html">About Us</a></li>
+                    <li><a href="contact_us_english.html">Contact Us</a></li>
+                    <li><a href="garlic.html"><span class="fi fi-es" title="Español"></span></a></li>
+                    <li><a href="garlic_english.html"><span class="fi fi-us" title="English"></span></a></li>
                 </ul>
             </nav>
         </div>
         <h1>AGRONEGOCIOS E INVERSIONES GUTIERREZ</h1>
     </header>
-    <main>
         <div class="main-text">
-            <h2>Chile ancho</h2>   
-            <p>El chile poblano (fresco) o chile ancho (seco) es una variedad del chile Capsicum annuum. 
-                Es muy apreciado en la gastronomía mexicana, donde se usa en todo tipo de recetas, como en los populares 
-                chiles rellenos. En comparación con otros tipos de chiles, el poblano es un fruto grande y con bajo contenido de 
-                capsaicina (entre 1.000–2.000 en la escala Scoville), por lo que no es muy picante.</p>
-            <h2>Ficha técnica</h2>
-            <p></p>
+            <main>
+                <h2>Ajo</h2>   
+                <p>El ajo (Allium sativum) es una planta culinaria conocida por sus propiedades medicinales y beneficios para la salud, 
+                    como el fortalecimiento del sistema inmunitario, la mejora de la salud cardiovascular y la reducción de la inflamación </p>
+                <h2>Ficha técnica</h2>
+                <p></p>
+            </main>
         </div>
-    </main>
     <footer>
         <div class="footer-container">
             <p>&copy; 2025 Agronegocios e Inversiones Gutierrez</p>
