--- a/about_us_english.html
+++ b/about_us_english.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,21 +14,21 @@
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
+                <a href="index_english.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index_english.html">Home</a></li>
                     <li class="dropdown">
-                    <a href="#">Productos</a>
+                    <a href="#">Products</a>
                         <ul class="dropdown-content">
-                            <li><a href="paprika.html">Pimiento Páprika</a></li>
-                            <li><a href="garlic.html">Ajo</a></li>
-                            <li><a href="pepper.html">Pimiento ancho</a></li>
+                            <li><a href="paprika_english.html">Paprika</a></li>
+                            <li><a href="garlic_english.html">Garlic</a></li>
+                            <li><a href="pepper_english.html">Ancho chili</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Acerca de nosotros</a></li>
-                    <li><a href="contact_us.html">Contáctanos</a></li>
+                    <li><a href="about_us_english.html">About Us</a></li>
+                    <li><a href="contact_us_english.html">Contact Us</a></li>
                     <li><a href="about_us.html"><span class="fi fi-es" title="Español"></span></a></li>
                     <li><a href="about_us_english.html"><span class="fi fi-us" title="English"></span></a></li>
                 </ul>
