--- a/index_english.html
+++ b/index_english.html
@@ -19,21 +19,21 @@
     <header>
         <div class="header-container">
             <div class="logo-placeholder">
-                <a href="index.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
+                <a href="index_english.html"><img id="logo" src="images/gutierrez_logo.png" alt="Logo" style="height:50px;" /> </a>
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index_english.html">Home</a></li>
                     <li class="dropdown">
-                    <a href="#">Productos</a>
+                    <a href="#">Products</a>
                         <ul class="dropdown-content">
-                            <li><a href="paprika.html">Paprika</a></li>
-                            <li><a href="garlic.html">Ajo</a></li>
-                            <li><a href="pepper.html">Chile Ancho</a></li>
+                            <li><a href="paprika_english.html">Paprika</a></li>
+                            <li><a href="garlic_english.html">Garlic</a></li>
+                            <li><a href="pepper_english.html">Ancho chili</a></li>
                         </ul>
                     </li>
-                    <li><a href="about_us.html">Acerca de nosotros</a></li>
-                    <li><a href="contact_us.html">Contáctanos</a></li>
+                    <li><a href="about_us_english.html">About Us</a></li>
+                    <li><a href="contact_us_english.html">Contact Us</a></li>
                     <li><a href="index.html"><span class="fi fi-es" title="Español"></span></a></li>
                     <li><a href="index_english.html"><span class="fi fi-us" title="English"></span></a></li>
                 </ul>
@@ -46,19 +46,19 @@
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
             <img src="images/pimiento_3.jpg" style="width:100%">
-            <div class="text">Los mejores productos y la mejor calidad</div>
+            <div class="text">The best products and best quality.</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
             <img src="images/pimiento_6.jpg" style="width:100%">
-            <div class="text">Hecho por una cadena autosostenible.</div>
+            <div class="text">Made by a self-sustainable chain.</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
             <img src="images/proceso_1.jpg" style="width:100%">
-            <div class="text">Hecho por una empresa familiar.</div>
+            <div class="text">Made by a family business.</div>
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
