--- a/paprika.html
+++ b/paprika.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agronegocios e Inversiones Gutierrez</title>
+    <title>AGRONEGOCIOS E INVERSIONES GUTIERREZ</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -28,10 +29,12 @@
                     </li>
                     <li><a href="about_us.html">Acerca de nosotros</a></li>
                     <li><a href="contact_us.html">Contáctanos</a></li>
+                    <li><a href="paprika.html"><span class="fi fi-es" title="Español"></span></a></li>
+                    <li><a href="paprika_english.html"><span class="fi fi-us" title="English"></span></a></li>
                 </ul>
             </nav>
         </div>
-        <h1>Agronegocios e Inversiones Gutierrez</h1>
+        <h1>AGRONEGOCIOS E INVERSIONES GUTIERREZ</h1>
     </header>
     <main>
         <div class="main-text">
@@ -39,6 +42,13 @@
             <p>Páprika (capsicum annum L.) es una variedad de pimiento dulce con la particularidad de ser alargado, distinto al 
                 "pimiento rojo" o "pimentón". Sus características de color, intensidad de picante y sabor, cambia de acuerdo a 
                 las mejoras genéticas de la planta y las técnicas de cultivo.</p>
+            <h2>Ficha técnica</h2>
+            <h3>Color</h3>
+            <h3>Tamaño</h3>
+            <h3>Packing</h3>
+            <h3>Humedad</h3>
+            <h3>Asta/SHU</h3>
+            <h2>Galería</h2>
         </div>
     </main>
     <footer>
