--- a/contact_us_english.html
+++ b/contact_us_english.html
@@ -39,14 +39,14 @@
     <main>
         <div class="contact-container">
             <div class="map-wrapper">
-                <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d820.912753195575!2d-72.19134622830248!3d-16.358151172157786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91419b89fb358f23%3A0xa96fbf0a202fdc07!2sAgronegocios%20e%20inversiones%20Gutierrez!5e1!3m2!1ses!2sus!4v1754425049048!5m2!1ses!2sus" 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d605.8080967622495!2d-72.21473367376862!3d-16.38288948025621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sus!4v1758934697011!5m2!1ses!2sus" 
                 width="600" 
                 height="450" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
             <div class="contact-text">
                 <div class="contact-item"><i class="fa-solid fa-phone"></i><p>Contact us through: +51956899907</p></div>                
