--- a/paprika.html
+++ b/paprika.html
@@ -55,6 +55,7 @@
         <div class="footer-container">
             <p>&copy; 2025 Agronegocios e Inversiones Gutierrez</p>
             <div class="social-icons">
+                <div class="contact-item"><i class="fa-solid fa-location-dot"></i><p>Dirección: Calle Las Moras Lote 1 y Lote 2 Villa San Pedro y San Pablo</p></div>
                 <a href="https://www.facebook.com/agronegocios.gutierrez" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://www.linkedin.com/company/agronegocios-e-inversiones-gutierrez" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://wa.me/+51956899907" target="_blank"><i class="fab fa-whatsapp"></i></a>
