--- a/garlic_english.html
+++ b/garlic_english.html
@@ -39,7 +39,7 @@
         <div class="main-text">
             <main>
                 <h2>Ajo</h2>   
-                <p>El ajo (Allium sativum) es una planta culinaria conocida por sus propiedades medicinales y beneficios para la salud, 
+                <p>Garlic (Allium sativum) is a gastronomic plant conocida por sus propiedades medicinales y beneficios para la salud, 
                     como el fortalecimiento del sistema inmunitario, la mejora de la salud cardiovascular y la reducción de la inflamación </p>
                 <h2>Ficha técnica</h2>
                 <p></p>
