--- a/garlic_english.html
+++ b/garlic_english.html
@@ -41,8 +41,40 @@
                 <h2>Ajo</h2>   
                 <p>Garlic (Allium sativum) is a gastronomic plant conocida por sus propiedades medicinales y beneficios para la salud, 
                     como el fortalecimiento del sistema inmunitario, la mejora de la salud cardiovascular y la reducción de la inflamación </p>
-                <h2>Ficha técnica</h2>
-                <p></p>
+                <h2>Varieties</h2>
+                <h2>Chinese White Garlic</h2>
+                <h3>Color</h3>
+                <h4>White</h4>
+                <h3>Size</h3>
+                <h4>Caliber 5 - 46 mm to 55 mm</h4>
+                <h4>Caliber 6 - 56 mm to 65 mm</h4>
+                <h4>Caliber 7 - 66 mm to 75 mm</h4>
+                <h3>Packing</h3>
+                <h4>10 kg or 22 lb cardboard boxes</h4>
+                <h4>25 kg or 55 lb</h4>
+                <h2>Gallery</h2>
+                <h2>Ajo Chino Morado</h2>
+                <h3>Color</h3>
+                <h4>Morado</h4>
+                <h3>Tamaño</h3>
+                <h4>Calibre 5 - 55 mm a 59 mm</h4>
+                <h4>Calibre 6 - 56 mm a 65 mm</h4>
+                <h4>Calibre 7 - 66 mm a 75 mm</h4>
+                <h3>Packing</h3>
+                <h4>Cajas de cartón de 10 kg o 22 lb</h4>
+                <h4>Mallas de 25 kg o 55 lb</h4>
+                <h2>Gallery</h2>
+                <h2>Ajo Chino Blanco</h2>
+                <h3>Color</h3>
+                <h4>Morado o blanco</h4>
+                <h3>Tamaño</h3>
+                <h4>Calibre 5 - 46 mm a 55 mm</h4>
+                <h4>Calibre 6 - 56 mm a 65 mm</h4>
+                <h4>Calibre 7 - 66 mm a 75 mm</h4>
+                <h3>Packing</h3>
+                <h4>Cajas de cartón de 10 kg o 22 lb</h4>
+                <h4>Mallas de 25 kg o 55 lb</h4>
+                <h2>Gallery</h2>
             </main>
         </div>
     <footer>
