--- a/pepper.html
+++ b/pepper.html
@@ -44,7 +44,17 @@
                 chiles rellenos. En comparación con otros tipos de chiles, el poblano es un fruto grande y con bajo contenido de 
                 capsaicina (entre 1.000–2.000 en la escala Scoville), por lo que no es muy picante.</p>
             <h2>Ficha técnica</h2>
-            <p></p>
+            <h3>Color</h3>
+            <h4>Rojizo oscuro</h4>
+            <h3>Tamaño</h3>
+            <h4>>12cm - 90% max.</h4>
+            <h4>&lt;12cm - 10% min.</h4>
+            <h3>Packing</h3>
+            <h4>Cajas de cartón de 11.36 kg o 25 lb</h4>
+            <h4>Pacas prensadas de 75 kg o 165 lb</h4>
+            <h3>Humedad</h3>
+            <h4>>13% HR</h4>
+            <h2>Galería</h2>
         </div>
     </main>
     <footer>
