--- a/garlic.html
+++ b/garlic.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
@@ -41,8 +41,71 @@
                 <h2>Ajo</h2>   
                 <p>El ajo (Allium sativum) es una planta culinaria conocida por sus propiedades medicinales y beneficios para la salud, 
                     como el fortalecimiento del sistema inmunitario, la mejora de la salud cardiovascular y la reducción de la inflamación </p>
-                <h2>Ficha técnica</h2>
-                <p></p>
+                <h2>Variedades</h2>
+
+                <section id="ajo-blanco">
+                    <h2>Ajo Chino Blanco</h2>
+                    <h3>Color: Blanco</h3>
+                    <h3>Tamaño</h3>
+                    <ul>
+                        <li>Calibre 5 - 46 mm a 55 mm</li>
+                        <li>Calibre 6 - 56 mm a 65 mm</li>
+                        <li>Calibre 7 - 66 mm a 75 mm</li>
+                    </ul>
+                    <h3>Packing</h3>
+                    <p>Cajas de cartón de 10 kg o 22 lb / Mallas de 25 kg o 55 lb</p>
+
+                    <div class="slideshow-container">
+                        <div class="mySlides fade">
+                            <div class="numbertext">1 / 3</div>
+                            <img src="images/ajo_1.jpg" style="width:100%">
+                            <div class="text">Los mejores productos y la mejor calidad</div>
+                        </div>
+
+                        <div class="mySlides fade">
+                            <div class="numbertext">2 / 3</div>
+                            <img src="images/ajo_2.jpg" style="width:100%">
+                            <div class="text">Hecho por una cadena autosostenible.</div>
+                        </div>
+
+                        <div class="mySlides fade">
+                            <div class="numbertext">3 / 3</div>
+                            <img src="images/ajo_3.jpeg" style="width:100%">
+                            <div class="text">Hecho por una empresa familiar.</div>
+                        </div>
+
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    </div>
+                    
+                    <div style="text-align:center; margin-top: 10px;">
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
+                        <span class="dot" onclick="currentSlide(3)"></span>
+                    </div>
+                </section>
+                <h2>Ajo Chino Morado</h2>
+                <h3>Color</h3>
+                <h4>Morado</h4>
+                <h3>Tamaño</h3>
+                <h4>Calibre 5 - 55 mm a 59 mm</h4>
+                <h4>Calibre 6 - 56 mm a 65 mm</h4>
+                <h4>Calibre 7 - 66 mm a 75 mm</h4>
+                <h3>Packing</h3>
+                <h4>Cajas de cartón de 10 kg o 22 lb</h4>
+                <h4>Mallas de 25 kg o 55 lb</h4>
+                <h2>Gallery</h2>
+                <h2>Ajo Chino Blanco</h2>
+                <h3>Color</h3>
+                <h4>Morado o blanco</h4>
+                <h3>Tamaño</h3>
+                <h4>Calibre 5 - 46 mm a 55 mm</h4>
+                <h4>Calibre 6 - 56 mm a 65 mm</h4>
+                <h4>Calibre 7 - 66 mm a 75 mm</h4>
+                <h3>Packing</h3>
+                <h4>Cajas de cartón de 10 kg o 22 lb</h4>
+                <h4>Mallas de 25 kg o 55 lb</h4>
+                <h2>Gallery</h2>
             </main>
         </div>
     <footer>
