--- a/paprika.html
+++ b/paprika.html
@@ -44,10 +44,15 @@
                 las mejoras genéticas de la planta y las técnicas de cultivo.</p>
             <h2>Ficha técnica</h2>
             <h3>Color</h3>
+            <h4>Rojizo</h4>
             <h3>Tamaño</h3>
+            <h4>>12cm - 90% max.</h4>
+            <h4>&lt;12cm - 10% min.</h4>
             <h3>Packing</h3>
+            <h4>Cajas de cartón de 11.36 kg o 25 lb</h4>
+            <h4>Pacas prensadas de 75 kg o 165 lb</h4>
             <h3>Humedad</h3>
-            <h3>Asta/SHU</h3>
+            <h4>>13% HR</h4>
             <h2>Galería</h2>
         </div>
     </main>
