--- a/paprika_english.html
+++ b/paprika_english.html
@@ -38,18 +38,52 @@
     </header>
     <main>
         <div class="main-text">
-            <h2>Ají Páprika</h2>   
+            <h2>Paprika Pepper</h2>   
             <p>Páprika (capsicum annum L.) es una variedad de pimiento dulce con la particularidad de ser alargado, distinto al 
                 "pimiento rojo" o "pimentón". Sus características de color, intensidad de picante y sabor, cambia de acuerdo a 
                 las mejoras genéticas de la planta y las técnicas de cultivo.</p>
-            <h2>Ficha técnica</h2>
+            <h2>Technical sheet</h2>
             <h3>Color</h3>
-            <h3>Tamaño</h3>
+            <h4>Reddish</h4>
+            <h3>Size</h3>
+            <h4>>12cm - 90% max.</h4>
+            <h4>&lt;12cm - 10% min.</h4>
             <h3>Packing</h3>
-            <h3>Humedad</h3>
-            <h3>Asta/SHU</h3>
-            <h2>Galería</h2>
-        </div>
+            <h4>11.36 kg or 25 lb cardboard boxes</h4>
+            <h4>75 kg or 165 lb pressed bales</h4>
+            <h3>Humidity</h3>
+            <h4>>13% HR</h4>
+            <h2>Gallery</h2>
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="images/pimiento_3.jpg" style="width:100%">
+                    <div class="text">Los mejores productos y la mejor calidad</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="images/pimiento_6.jpg" style="width:100%">
+                    <div class="text">Hecho por una cadena autosostenible.</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="images/proceso_1.jpg" style="width:100%">
+                    <div class="text">Hecho por una empresa familiar.</div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
+                <br>
+
+                <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                </div>
+            </div>
     </main>
     <footer>
         <div class="footer-container">
