--- a/pepper_english.html
+++ b/pepper_english.html
@@ -43,8 +43,18 @@
                 Es muy apreciado en la gastronomía mexicana, donde se usa en todo tipo de recetas, como en los populares 
                 chiles rellenos. En comparación con otros tipos de chiles, el poblano es un fruto grande y con bajo contenido de 
                 capsaicina (entre 1.000–2.000 en la escala Scoville), por lo que no es muy picante.</p>
-            <h2>Ficha técnica</h2>
-            <p></p>
+            <h2>Technical sheet</h2>
+            <h3>Color</h3>
+            <h4>Dark reddish</h4>
+            <h3>Size</h3>
+            <h4>>12cm - 90% max.</h4>
+            <h4>&lt;12cm - 10% min.</h4>
+            <h3>Packing</h3>
+            <h4>11.36 kg or 25 lb cardboard boxes</h4>
+            <h4>75 kg or 165 lb pressed bales</h4>
+            <h3>Humidity</h3>
+            <h4>>13% HR</h4>
+            <h2>Gallery</h2>
         </div>
     </main>
     <footer>
