Updated the about us page

--- a/about_us.html
+++ b/about_us.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <header>
@@ -38,16 +38,22 @@
     </header>
     <main>
         <div class="main-text">
-            <h2>Visión</h2>   
-            <p>Ser la compañía comercializadora de alimentos líder caracterizada por brindar un servicio 
-                de calidad en compromiso con las personas y respeto del medio ambiente a fin de que ser un 
-                instrumento de desarrollo integral de nuestro país.</p>
-            <h2>Misión</h2>
-            <p>Generar valor manteniendo el compromiso de calidad, trazabilidad y salubridad con nuestros clientes.</p>
-            <h2>Nuestra forma de trabajar</h2>
-            <p>A través de nuestra labor de servicio, favorecemos a centenares de familias gracias al modelo de negocio que
-                usamos.
-            </p>
+            <section class="reveal slide-left">
+                <h2>Visión</h2>   
+                <p>Ser la compañía comercializadora de alimentos líder caracterizada por brindar un servicio 
+                de calidad en compromiso con las personas y respeto del medio ambiente...</p>
+                <div class="image-container">
+                    <img src="images/proceso_1.jpg" alt="Visión Agronegocios" class="animated-img">
+                </div>
+            </section>
+
+            <section class="reveal slide-right">
+                <h2>Misión</h2>
+                <p>Generar valor manteniendo el compromiso de calidad, trazabilidad y salubridad con nuestros clientes.</p>
+                <div class="image-container">
+                    <img src="images/proceso_2.jpg" alt="Misión Agronegocios" class="animated-img">
+                </div>
+            </section>
 
             <h1>¿A que países exportamos?</h1>
             <h2>ESTADOS UNIDOS</h2>
