--- a/garlic.html
+++ b/garlic.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AGRONEGOCIOS E INVERSIONES GUTIERREZ</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
     <script src="scripts.js" defer></script>
@@ -95,7 +95,7 @@
                 <h4>Cajas de cartón de 10 kg o 22 lb</h4>
                 <h4>Mallas de 25 kg o 55 lb</h4>
                 <h2>Gallery</h2>
-                <h2>Ajo Chino Blanco</h2>
+                <h2>Ajo Napurí Mejorado</h2>
                 <h3>Color</h3>
                 <h4>Morado o blanco</h4>
                 <h3>Tamaño</h3>
